mae denormalised || denormalizing functionality for ocpa: work started

--- a/replicating/reproduce_adams.ipynb
+++ b/replicating/reproduce_adams.ipynb
@@ -2,9 +2,19 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Torch version: 1.13.1+cu117\n",
+            "Cuda available: True\n",
+            "Torch geometric version: 2.2.0\n"
+          ]
+        }
+      ],
       "source": [
         "# SELF REMINDER. Copy the 'ocpa' directory to the forked one from github, so that I can push updates to github.\n",
         "\n",
@@ -48,28 +58,48 @@
         "TARGET_LABEL = (feature_factory.EVENT_REMAINING_TIME, ())\n",
         "SUBGRAPH_SIZE = 4\n",
         "EPOCHS = 30\n",
-        "NUM_GRAPHS_PER_BATCH = 64\n",
-        "torch.manual_seed(RANDOM_SEED)\n",
-        "random.seed(RANDOM_SEED)\n",
-        "np.random.seed(RANDOM_SEED)"
+        "NUM_GRAPHS_PER_BATCH = 64"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initializing random seeds for maximizing reproducibility\n",
+        "torch.manual_seed(RANDOM_SEED)\n",
+        "def seed_worker(worker_id) -> None:\n",
+        "    # worker_seed = torch.initial_seed() % RANDOM_SEED\n",
+        "    worker_seed = RANDOM_SEED\n",
+        "    np.random.seed(worker_seed)\n",
+        "    random.seed(worker_seed)\n",
+        "\n",
+        "generator = torch.Generator().manual_seed(RANDOM_SEED)\n",
+        "# torch.use_deterministic_algorithms(True) # incompatible with GCN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "# If FEATURE_STORAGE_FILE not cached, generate it\n",
         "if not os.path.exists(f\"{STORAGE_PATH}/raw/{FEATURE_STORAGE_FILE}\"):\n",
-        "    with open(\n",
-        "        f\"{STORAGE_PATH}/raw/BPI17-feature_storage-[C2,D1,P2,P3,O3].fs\", \"rb\"\n",
-        "    ) as file:\n",
-        "        feature_storage: FeatureStorage = pickle.load(file)\n",
-        "\n",
+        "    if not os.path.exists(f\"{STORAGE_PATH}/raw/BPI17-feature_storage-[C2,D1,P2,P3,O3].fs\"):\n",
+        "        from importing_ocel import feature_storage\n",
+        "    else:\n",
+        "        with open(\n",
+        "            f\"{STORAGE_PATH}/raw/BPI17-feature_storage-[C2,D1,P2,P3,O3].fs\", \"rb\"\n",
+        "        ) as file:\n",
+        "            feature_storage: FeatureStorage = pickle.load(file)\n",
+        "    \n",
+        "    # Adams didn't give this split a random seed, \n",
+        "    # thus we can split the validation set in this arbitrary manner\n",
         "    feature_storage.extract_normalized_train_test_split(\n",
         "        test_size=0.3,\n",
-        "        validation_size=0.7*0.2,\n",
+        "        validation_size=0.7*0.2, \n",
         "        scaler=StandardScaler,\n",
         "        scaling_exempt_features=[],\n",
         "        state=RANDOM_SEED,\n",
@@ -109,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -123,7 +153,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 168030/168030 [00:45<00:00, 3731.45it/s]\n"
+            "100%|██████████| 168030/168030 [00:41<00:00, 4003.36it/s]\n"
           ]
         },
         {
@@ -163,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -181,7 +211,6 @@
         }
       ],
       "source": [
-        "\n",
         "from model import GCN, GAT\n",
         "import torch\n",
         "from torch_geometric.loader import DataLoader\n",
@@ -224,12 +253,32 @@
         "loss_fn = mae\n",
         "\n",
         "train_loader = DataLoader(\n",
-        "    ds_train, batch_size=NUM_GRAPHS_PER_BATCH, shuffle=False, pin_memory=True\n",
+        "    ds_train,\n",
+        "    batch_size=NUM_GRAPHS_PER_BATCH,\n",
+        "    shuffle=False,\n",
+        "    pin_memory=True,\n",
+        "    num_workers = 4,\n",
+        "    worker_init_fn=seed_worker,\n",
+        "    generator=generator,\n",
         ")\n",
         "val_loader = DataLoader(\n",
-        "    ds_val, batch_size=NUM_GRAPHS_PER_BATCH, shuffle=False, pin_memory=True\n",
+        "    ds_val,\n",
+        "    batch_size=NUM_GRAPHS_PER_BATCH,\n",
+        "    shuffle=False,\n",
+        "    pin_memory=True,\n",
+        "    num_workers = 4,\n",
+        "    worker_init_fn=seed_worker,\n",
+        "    generator=generator,\n",
         ")\n",
-        "test_loader = DataLoader(ds_test, batch_size=128, shuffle=False, pin_memory=True)\n",
+        "test_loader = DataLoader(\n",
+        "    ds_test,\n",
+        "    batch_size=128,\n",
+        "    shuffle=False,\n",
+        "    pin_memory=True,\n",
+        "    num_workers = 4,\n",
+        "    worker_init_fn=seed_worker,\n",
+        "    generator=generator,\n",
+        ")\n",
         "\n",
         "\n",
         "def train_one_epoch(\n",
@@ -318,11 +367,11 @@
         "            best_vloss = avg_vloss\n",
         "            torch.save(model.state_dict(), f\"{model_path}/state_dict_epoch{epoch}.pt\")\n",
         "\n",
-        "\n",
         "def evaluate_model(\n",
         "    model, dataloader, metric: callable, device: str = \"cpu\", verbose: bool = False\n",
         ") -> float or list[float]:\n",
         "    with torch.no_grad():\n",
+        "\n",
         "        def _eval_batch(batch, model):\n",
         "            batch_inputs, batch_adjacency_matrix, batch_labels = (\n",
         "                batch.x.float(),\n",
@@ -330,17 +379,20 @@
         "                batch.y.float(),\n",
         "            )\n",
         "            return model(batch_inputs, batch_adjacency_matrix), batch_labels\n",
+        "\n",
         "        model.eval()\n",
         "        model.train(False)\n",
         "        model.to(device)\n",
-        "        y_preds = []\n",
-        "        y_true = []\n",
+        "        y_preds = torch.tensor([]).to(device)\n",
+        "        y_true = torch.tensor([]).to(device)\n",
         "        for batch in tqdm(dataloader, disable=not (verbose)):\n",
         "            batch.to(device)\n",
-        "            y_preds, y_true = _eval_batch(batch, model)\n",
-        "            y_preds += y_preds\n",
-        "            y_true += y_true\n",
-        "    return metric(y_preds, y_true)\n"
+        "            batch_y_preds, batch_y_true = _eval_batch(batch, model)\n",
+        "            y_preds = torch.cat((y_preds, batch_y_preds))\n",
+        "            y_true = torch.cat((y_true, batch_y_true))\n",
+        "        y_preds = torch.squeeze(y_preds)\n",
+        "    return metric(y_preds.to(\"cpu\"), y_true.to(\"cpu\"))\n",
+        "\n"
       ]
     },
     {
@@ -366,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -375,116 +427,157 @@
               "<All keys matched successfully>"
             ]
           },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "model_path0 = \"/home/tim/Development/OCELFeatureExtractionExperiments/models/GCN_20230315_17h07m/state_dict_epoch26.pt\"\n",
+        "model_path = \"/home/tim/Development/OCELFeatureExtractionExperiments/models/GCN_20230315_23h22m/state_dict_epoch6.pt\"\n",
+        "model.load_state_dict(torch.load(model_path))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 2626/2626 [00:30<00:00, 86.32it/s] \n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "tensor(0.4440)"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "normed_train_mae = evaluate_model(\n",
+        "    model=model,\n",
+        "    dataloader=train_loader,\n",
+        "    metric=mae,\n",
+        "    device=device,\n",
+        "    verbose=True,\n",
+        ")\n",
+        "normed_train_mae"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 657/657 [00:07<00:00, 86.79it/s] \n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "tensor(0.4535)"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "normed_val_mae = evaluate_model(\n",
+        "    model=model,\n",
+        "    dataloader=val_loader,\n",
+        "    metric=mae,\n",
+        "    device=device,\n",
+        "    verbose=True,\n",
+        ")\n",
+        "normed_val_mae"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 699/699 [00:13<00:00, 51.52it/s]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "tensor(0.4386)"
+            ]
+          },
           "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "model_path = \"/home/tim/Development/OCELFeatureExtractionExperiments/models/GCN_20230315_17h07m/state_dict_epoch26.pt\"\n",
-        "model.load_state_dict(torch.load(model_path))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 2626/2626 [01:18<00:00, 33.50it/s]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "1.3140289"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "train_mae = evaluate_model(\n",
-        "    model=model,\n",
-        "    dataloader=train_loader,\n",
-        "    metric=mean_absolute_error,\n",
-        "    device='cpu',\n",
-        "    verbose=True,\n",
-        ")\n",
-        "train_mae"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 657/657 [00:21<00:00, 30.99it/s]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "0.71510595"
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "val_mae = evaluate_model(\n",
-        "    model=model,\n",
-        "    dataloader=val_loader,\n",
-        "    metric=mean_absolute_error,\n",
-        "    device='cpu',\n",
-        "    verbose=True,\n",
-        ")\n",
-        "val_mae"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 699/699 [00:25<00:00, 27.13it/s]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "0.7567936"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "test_mae = evaluate_model(\n",
+        "normed_test_mae = evaluate_model(\n",
         "    model=model,\n",
         "    dataloader=test_loader,\n",
-        "    metric=mean_absolute_error,\n",
-        "    device='cpu',\n",
+        "    metric=mae,\n",
+        "    device=device,\n",
         "    verbose=True,\n",
         ")\n",
-        "test_mae"
+        "normed_test_mae"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open(\n",
+        "    f\"{STORAGE_PATH}/raw/{FEATURE_STORAGE_FILE}\",\n",
+        "    \"rb\",\n",
+        ") as file:\n",
+        "    fs: FeatureStorage = pickle.load(file)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean absolute error denormalized:\n",
+            "Train MAE:  1721453.9\n",
+            "Val MAE:    1732891.6\n",
+            "Test MAE:   1715052.8\n"
+          ]
+        }
+      ],
+      "source": [
+        "train_mae = fs.scaler.inverse_transform([normed_train_mae]*25)[-2]\n",
+        "val_mae = fs.scaler.inverse_transform([normed_val_mae]*25)[-2]\n",
+        "test_mae = fs.scaler.inverse_transform([normed_test_mae]*25)[-2]\n",
+        "\n",
+        "print(\"Mean absolute error denormalized:\")\n",
+        "print('Train MAE: ', train_mae)\n",
+        "print('Val MAE:   ', val_mae)\n",
+        "print('Test MAE:  ', test_mae)"
       ]
     }
   ],
