--- a/replicating/reproduce_adams.ipynb
+++ b/replicating/reproduce_adams.ipynb
@@ -2,15 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Torch version: 1.13.1+cu117\n",
-            "Cuda available: True\n",
+            "Torch version: 1.13.1+cpu\n",
+            "Cuda available: False\n",
             "Torch geometric version: 2.2.0\n"
           ]
         }
@@ -24,8 +24,12 @@
         "from tqdm import tqdm\n",
         "import os\n",
         "import random\n",
+        "from sys import platform\n",
+        "if platform == \"linux\" or platform == \"linux2\":\n",
+        "    os.chdir(\"/home/tim/Development/OCELFeatureExtractionExperiments/\")\n",
+        "elif platform == \"win32\":\n",
+        "    os.chdir(\"c:\\\\Users\\\\Tim\\\\Development\\\\OCELFeatureExtractionExperiments\")\n",
         "\n",
-        "os.chdir(\"/home/tim/Development/OCELFeatureExtractionExperiments/\")\n",
         "# from copy import deepcopy\n",
         "\n",
         "# Object centric process mining\n",
@@ -63,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -81,9 +85,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n",
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n",
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "No EventSubGraphDataset found with this configuration in 'data\\ocpa-processed\\processed'. Proceeding to processing...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Processing...\n",
+            "17645it [09:46, 30.09it/s]\n",
+            "Done!\n"
+          ]
+        }
+      ],
       "source": [
         "# If FEATURE_STORAGE_FILE not cached, generate it\n",
         "if not os.path.exists(f\"{STORAGE_PATH}/raw/{FEATURE_STORAGE_FILE}\"):\n",
@@ -336,7 +369,7 @@
         "        )\n",
         "\n",
         "        # We don't need gradients on to do reporting\n",
-        "        model.train(False)\n",
+        "        # model.train(False)\n",
         "\n",
         "        running_vloss = 0.0\n",
         "        for i, vdata in enumerate(validation_loader):\n",
@@ -598,7 +631,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
