--- a/debug_script.ipynb
+++ b/debug_script.ipynb
@@ -6,11 +6,19 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Torch version: 1.13.1+cu117\n",
-            "Cuda available: True\n",
+            "Torch version: 1.13.1+cpu\n",
+            "Cuda available: False\n",
             "Torch geometric version: 2.2.0\n"
           ]
         }
@@ -23,6 +31,7 @@
         "from statistics import median, mean\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "from copy import copy\n",
         "# Data handling\n",
         "# Object centric process mining\n",
         "# import ocpa.algo.evaluation.precision_and_fitness.utils as evaluation_utils # COMMENTED OUT BY TIM\n",
@@ -80,7 +89,20 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n",
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n",
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\pandas\\core\\common.py:241: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+            "  result = np.asarray(values, dtype=dtype)\n"
+          ]
+        }
+      ],
       "source": [
         "with open(\n",
         "        f\"{STORAGE_PATH}/raw/BPI17-feature_storage-[C2,D1,P2,P3,O3].fs\", \"rb\"\n",
@@ -116,32 +138,10 @@
       ],
       "source": [
         "test_mae_normed = 0.4386\n",
+        "prepared_normalized_data = {TARGET_LABEL:[test_mae_normed, 0.87 ,0.222,2.7]}\n",
+        "normalized_data = {'1prev_act':[-1,-2],TARGET_LABEL:[test_mae_normed, test_mae_normed+1],'horse':[1,1],'WRONG':[5,5]}\n",
+        "event_features = ['prev_act',TARGET_LABEL,'paart','horse','rem_time']\n",
         "fs.scaler.inverse_transform([test_mae_normed]*25)[-2]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[(1, \"('event_remaining_time', ())\")]"
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "normalized_data = {'prev_act':[-1,-2],TARGET_LABEL:[test_mae_normed,test_mae_normed+1],'horse':[1,1],'WRONG':[5,5]}\n",
-        "normalized_data_keys = [(i, str(key)) for i,key in enumerate(normalized_data.keys()) if type(key)==tuple]\n",
-        "original_key_idxs = np.argsort(normalized_data_keys)\n",
-        "\n",
-        "# [ast.literal_eval(key) for key in normalized_data_keys]\n",
-        "normalized_data_keys"
       ]
     },
     {
@@ -150,9 +150,125 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\Tim\\Development\\OCELFeatureExtractionExperiments\\.env\\lib\\site-packages\\ocpa\\algo\\predictive_monitoring\\obj.py:316: UserWarning: Could not find keys '{'horse', 'WRONG', '1prev_act'}' as event features in Feature_Storage. They will be excluded from denormalization.\n",
+            "  warn(\n"
+          ]
+        },
+        {
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "      <th>7</th>\n",
+              "      <th>8</th>\n",
+              "      <th>9</th>\n",
+              "      <th>...</th>\n",
+              "      <th>15</th>\n",
+              "      <th>16</th>\n",
+              "      <th>17</th>\n",
+              "      <th>18</th>\n",
+              "      <th>19</th>\n",
+              "      <th>20</th>\n",
+              "      <th>21</th>\n",
+              "      <th>22</th>\n",
+              "      <th>23</th>\n",
+              "      <th>24</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.079982</td>\n",
+              "      <td>0.051701</td>\n",
+              "      <td>0.076074</td>\n",
+              "      <td>0.079982</td>\n",
+              "      <td>0.216048</td>\n",
+              "      <td>0.100262</td>\n",
+              "      <td>0.138106</td>\n",
+              "      <td>0.100674</td>\n",
+              "      <td>0.059312</td>\n",
+              "      <td>0.059181</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.00936</td>\n",
+              "      <td>0.032419</td>\n",
+              "      <td>0.005267</td>\n",
+              "      <td>0.001011</td>\n",
+              "      <td>0.000014</td>\n",
+              "      <td>0.000181</td>\n",
+              "      <td>16479.460734</td>\n",
+              "      <td>732939.172227</td>\n",
+              "      <td>1.181379e+06</td>\n",
+              "      <td>1.432241</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.079982</td>\n",
+              "      <td>0.051701</td>\n",
+              "      <td>0.076074</td>\n",
+              "      <td>0.079982</td>\n",
+              "      <td>0.216048</td>\n",
+              "      <td>0.100262</td>\n",
+              "      <td>0.138106</td>\n",
+              "      <td>0.100674</td>\n",
+              "      <td>0.059312</td>\n",
+              "      <td>0.059181</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0.00936</td>\n",
+              "      <td>0.032419</td>\n",
+              "      <td>0.005267</td>\n",
+              "      <td>0.001011</td>\n",
+              "      <td>0.000014</td>\n",
+              "      <td>0.000181</td>\n",
+              "      <td>16479.460734</td>\n",
+              "      <td>732939.172227</td>\n",
+              "      <td>1.181379e+06</td>\n",
+              "      <td>2.319387</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2 rows × 25 columns</p>\n",
+              "</div>"
+            ],
             "text/plain": [
-              "{('event_remaining_time', ()), 'horse', 'prev_act'}"
+              "         0         1         2         3         4         5         6   \\\n",
+              "0  0.079982  0.051701  0.076074  0.079982  0.216048  0.100262  0.138106   \n",
+              "1  0.079982  0.051701  0.076074  0.079982  0.216048  0.100262  0.138106   \n",
+              "\n",
+              "         7         8         9   ...       15        16        17        18  \\\n",
+              "0  0.100674  0.059312  0.059181  ...  0.00936  0.032419  0.005267  0.001011   \n",
+              "1  0.100674  0.059312  0.059181  ...  0.00936  0.032419  0.005267  0.001011   \n",
+              "\n",
+              "         19        20            21             22            23        24  \n",
+              "0  0.000014  0.000181  16479.460734  732939.172227  1.181379e+06  1.432241  \n",
+              "1  0.000014  0.000181  16479.460734  732939.172227  1.181379e+06  2.319387  \n",
+              "\n",
+              "[2 rows x 25 columns]"
             ]
           },
           "execution_count": 5,
@@ -161,7 +277,129 @@
         }
       ],
       "source": [
-        "event_features = ['prev_act',TARGET_LABEL,'paart','horse','rem_time']\n",
+        "# KLOPT NOG NIET\n",
+        "res = fs.denormalize(normalized_data)\n",
+        "pd.DataFrame(res)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "empty_dict = copy(fs.empty_dict)\n",
+        "len(list(empty_dict.values())[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 49,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\n",
+        "# prepared_normalized_data\n",
+        "# empty_dict.pop(TARGET_LABEL)\n",
+        "empty_dict.update(prepared_normalized_data)\n",
+        "h = pd.DataFrame(empty_dict)\n",
+        "res = fs.scaler.inverse_transform(h)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{1: [0, 0, 0, 0],\n",
+              " 2: [0, 0, 0, 0],\n",
+              " 3: [0, 0, 0, 0],\n",
+              " 4: [0, 0, 0, 0],\n",
+              " 5: [0, 0, 0, 0],\n",
+              " 6: [0, 0, 0, 0],\n",
+              " 7: [0, 0, 0, 0],\n",
+              " 8: [0, 0, 0, 0],\n",
+              " 9: [0, 0, 0, 0],\n",
+              " 10: [0, 0, 0, 0],\n",
+              " 11: [0, 0, 0, 0],\n",
+              " 12: [0, 0, 0, 0],\n",
+              " 13: [0, 0, 0, 0],\n",
+              " 14: [0, 0, 0, 0],\n",
+              " 15: [0, 0, 0, 0],\n",
+              " 16: [0, 0, 0, 0],\n",
+              " 17: [0, 0, 0, 0],\n",
+              " 18: [0, 0, 0, 0],\n",
+              " 19: [0, 0, 0, 0],\n",
+              " 20: [0, 0, 0, 0],\n",
+              " 21: [0, 0, 0, 0],\n",
+              " 22: [0, 0, 0, 0],\n",
+              " 24: [0, 0, 0, 0],\n",
+              " ('event_remaining_time', ()): [0.4386, 1.4386],\n",
+              " 0: [0, 0]}"
+            ]
+          },
+          "execution_count": 41,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[(1, \"('event_remaining_time', ())\")]"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "normalized_data_keys = [(i, str(key)) for i,key in enumerate(normalized_data.keys()) if type(key)==tuple]\n",
+        "# original_key_idxs = np.argsort(normalized_data_keys)\n",
+        "\n",
+        "# [ast.literal_eval(key) for key in normalized_data_keys]\n",
+        "normalized_data_keys"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{('event_remaining_time', ()), 'horse', 'prev_act'}"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
         "invalid_keys = set(normalized_data.keys()) - set(event_features)\n",
         "valid_keys = set(normalized_data.keys()) & set(event_features)\n",
         "valid_keys"
@@ -169,52 +407,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{0, 1, 3}"
+              "{('event_remaining_time', ()), 2, 4, 'horse', 'prev_act'}"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
+        "\n",
         "df = pd.DataFrame(normalized_data)\n",
         "valid_key_idxs_in_event_feats = {event_features.index(key) for key in valid_keys}\n",
         "event_feats_idxs = set(range(len(event_features)))\n",
         "absent_feat_idxs_in_normed_data_keys = event_feats_idxs - valid_key_idxs_in_event_feats\n",
-        "absent_normed_data = {k:v for (k,v) in zip(absent_feat_idxs_in_normed_data_keys,[[0]*len(df)]*len(absent_feat_idxs_in_normed_data_keys))}\n",
-        "valid_key_idxs_in_event_feats"
+        "empty_dict = {k:v for (k,v) in zip(range(len(event_features)),[[0]*len(df)]*len(event_features))}\n",
+        "\n",
+        "for key_idx,key in zip(valid_key_idxs_in_event_feats,valid_keys):\n",
+        "    for k,v in empty_dict.items():\n",
+        "        if key_idx ==k:\n",
+        "            empty_dict.update({key_idx:normalized_data[key]})\n",
+        "    empty_dict[key] = empty_dict.pop(key_idx)\n",
+        "\n",
+        "df = pd.DataFrame(empty_dict)\n",
+        "set(df.keys())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{2, 4}"
+              "[0.4386, 1.4386]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "absent_feat_idxs_in_normed_data_keys"
+        "normalized_data[TARGET_LABEL]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -223,7 +470,7 @@
               "('event_remaining_time', ())"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -566,7 +813,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.0"
     }
   },
   "nbformat": 4,
