--- a/replicating/reproduce_adams.ipynb
+++ b/replicating/reproduce_adams.ipynb
@@ -58,7 +58,7 @@
         "TARGET_LABEL = (feature_factory.EVENT_REMAINING_TIME, ())\n",
         "SUBGRAPH_SIZE = 4\n",
         "EPOCHS = 30\n",
-        "NUM_GRAPHS_PER_BATCH = 64"
+        "NUM_GRAPHS_PER_BATCH = 128"
       ]
     },
     {
@@ -70,8 +70,8 @@
         "# Initializing random seeds for maximizing reproducibility\n",
         "torch.manual_seed(RANDOM_SEED)\n",
         "def seed_worker(worker_id) -> None:\n",
-        "    # worker_seed = torch.initial_seed() % RANDOM_SEED\n",
-        "    worker_seed = RANDOM_SEED\n",
+        "    worker_seed = torch.initial_seed() % RANDOM_SEED\n",
+        "    # worker_seed = RANDOM_SEED\n",
         "    np.random.seed(worker_seed)\n",
         "    random.seed(worker_seed)\n",
         "\n",
@@ -139,47 +139,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Train set\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 168030/168030 [00:41<00:00, 4003.36it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "EventSubGraphDataset (#graphs=168030):\n",
-            "+------------+----------+----------+\n",
-            "|            |   #nodes |   #edges |\n",
-            "|------------+----------+----------|\n",
-            "| mean       |        4 |      3   |\n",
-            "| std        |        0 |      0.6 |\n",
-            "| min        |        4 |      0   |\n",
-            "| quantile25 |        4 |      3   |\n",
-            "| median     |        4 |      3   |\n",
-            "| quantile75 |        4 |      3   |\n",
-            "| max        |        4 |      5   |\n",
-            "+------------+----------+----------+\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "print(\"Train set\")\n",
-        "print(ds_train.get_summary())\n",
-        "print()\n",
+        "# print(\"Train set\")\n",
+        "# print(ds_train.get_summary())\n",
+        "# print()\n",
         "\n",
         "# Val and test look the same (most likely)\n",
         "# print(\"Validation set\")\n",
@@ -193,19 +159,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "GCN(\n",
-            "  (gconv1): GCNConv(24, 24)\n",
-            "  (gconv2): GCNConv(24, 24)\n",
-            "  (out): Linear(in_features=96, out_features=1, bias=True)\n",
+            "GAT(\n",
+            "  (gconv1): GATConv(24, 24, heads=1)\n",
+            "  (gconv2): GATConv(24, 24, heads=1)\n",
+            "  (dropout): Dropout(p=0.2, inplace=False)\n",
+            "  (out): Linear(in_features=24, out_features=1, bias=True)\n",
             ")\n",
-            "Number of parameters: 1297\n",
+            "Number of parameters: 1321\n",
             "Device: cuda:0\n"
           ]
         }
@@ -222,9 +189,9 @@
         "\n",
         "\n",
         "# Initialize model\n",
-        "model = GCN(\n",
-        "    ds_train.num_node_features,\n",
-        "    {\n",
+        "model = GAT(\n",
+        "    num_node_features=ds_train.num_node_features,\n",
+        "    hyperparams={\n",
         "        \"num_hidden_features\": ds_train.num_node_features,\n",
         "        \"size_subgraph_samples\": SUBGRAPH_SIZE,\n",
         "    },\n",
@@ -240,12 +207,12 @@
         "# data = ds_train.to(device)\n",
         "\n",
         "# Initialize Optimizer\n",
-        "learning_rate = 0.01\n",
-        "# decay = 5e-4\n",
+        "learning_rate = 0.015\n",
+        "decay = 5e-4\n",
         "optimizer = torch.optim.Adam(\n",
         "    model.parameters(),\n",
         "    lr=learning_rate,\n",
-        "    #  weight_decay=decay\n",
+        "    weight_decay=decay\n",
         ")\n",
         "\n",
         "mse = torch.nn.MSELoss()\n",
@@ -397,9 +364,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "EPOCH 1:\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/1313 [00:00<?, ?it/s]/home/tim/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([128])) that is different to the input size (torch.Size([512])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+            "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+            "  0%|          | 0/1313 [00:01<?, ?it/s]\n"
+          ]
+        },
+        {
+          "ename": "RuntimeError",
+          "evalue": "The size of tensor a (512) must match the size of tensor b (128) at non-singleton dimension 0",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[6], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Initializing in a separate cell so we can easily add more epochs to the same run\u001b[39;00m\n\u001b[1;32m      2\u001b[0m timestamp \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mnow()\u001b[39m.\u001b[39mstrftime(\u001b[39m\"\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m%\u001b[39m\u001b[39mHh\u001b[39m\u001b[39m%\u001b[39m\u001b[39mMm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m run_training(\n\u001b[1;32m      5\u001b[0m     num_epochs\u001b[39m=\u001b[39;49mEPOCHS,\n\u001b[1;32m      6\u001b[0m     model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m      7\u001b[0m     train_loader\u001b[39m=\u001b[39;49mtrain_loader,\n\u001b[1;32m      8\u001b[0m     validation_loader\u001b[39m=\u001b[39;49mval_loader,\n\u001b[1;32m      9\u001b[0m     optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[1;32m     10\u001b[0m     loss_fn\u001b[39m=\u001b[39;49mloss_fn,\n\u001b[1;32m     11\u001b[0m     timestamp\u001b[39m=\u001b[39;49mtimestamp,\n\u001b[1;32m     12\u001b[0m )\n",
+            "Cell \u001b[0;32mIn[5], line 121\u001b[0m, in \u001b[0;36mrun_training\u001b[0;34m(num_epochs, model, train_loader, validation_loader, optimizer, loss_fn, timestamp)\u001b[0m\n\u001b[1;32m    119\u001b[0m \u001b[39m# Make sure gradient tracking is on, and do a pass over the data\u001b[39;00m\n\u001b[1;32m    120\u001b[0m model\u001b[39m.\u001b[39mtrain(\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 121\u001b[0m avg_loss \u001b[39m=\u001b[39m train_one_epoch(\n\u001b[1;32m    122\u001b[0m     epoch, model, train_loader, optimizer, loss_fn, writer\n\u001b[1;32m    123\u001b[0m )\n\u001b[1;32m    125\u001b[0m \u001b[39m# We don't need gradients on to do reporting\u001b[39;00m\n\u001b[1;32m    126\u001b[0m model\u001b[39m.\u001b[39mtrain(\u001b[39mFalse\u001b[39;00m)\n",
+            "Cell \u001b[0;32mIn[5], line 91\u001b[0m, in \u001b[0;36mtrain_one_epoch\u001b[0;34m(epoch_index, model, train_loader, optimizer, loss_fn, tb_writer)\u001b[0m\n\u001b[1;32m     89\u001b[0m outputs \u001b[39m=\u001b[39m model(inputs, adjacency_matrix)\n\u001b[1;32m     90\u001b[0m \u001b[39m# Compute loss and gradients\u001b[39;00m\n\u001b[0;32m---> 91\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(torch\u001b[39m.\u001b[39;49msqueeze(outputs), labels)\n\u001b[1;32m     92\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     93\u001b[0m \u001b[39m# Adjust learnable weights\u001b[39;00m\n",
+            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch/nn/modules/module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch/nn/modules/loss.py:536\u001b[0m, in \u001b[0;36mMSELoss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m    535\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor, target: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 536\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mmse_loss(\u001b[39minput\u001b[39;49m, target, reduction\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction)\n",
+            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch/nn/functional.py:3291\u001b[0m, in \u001b[0;36mmse_loss\u001b[0;34m(input, target, size_average, reduce, reduction)\u001b[0m\n\u001b[1;32m   3288\u001b[0m \u001b[39mif\u001b[39;00m size_average \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mor\u001b[39;00m reduce \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3289\u001b[0m     reduction \u001b[39m=\u001b[39m _Reduction\u001b[39m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3291\u001b[0m expanded_input, expanded_target \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mbroadcast_tensors(\u001b[39minput\u001b[39;49m, target)\n\u001b[1;32m   3292\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39m_C\u001b[39m.\u001b[39m_nn\u001b[39m.\u001b[39mmse_loss(expanded_input, expanded_target, _Reduction\u001b[39m.\u001b[39mget_enum(reduction))\n",
+            "File \u001b[0;32m~/Development/OCELFeatureExtractionExperiments/.env/lib/python3.9/site-packages/torch/functional.py:74\u001b[0m, in \u001b[0;36mbroadcast_tensors\u001b[0;34m(*tensors)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function(tensors):\n\u001b[1;32m     73\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(broadcast_tensors, tensors, \u001b[39m*\u001b[39mtensors)\n\u001b[0;32m---> 74\u001b[0m \u001b[39mreturn\u001b[39;00m _VF\u001b[39m.\u001b[39;49mbroadcast_tensors(tensors)\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (512) must match the size of tensor b (128) at non-singleton dimension 0"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# Initializing in a separate cell so we can easily add more epochs to the same run\n",
@@ -418,20 +419,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<All keys matched successfully>"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "model_path0 = \"/home/tim/Development/OCELFeatureExtractionExperiments/models/GCN_20230315_17h07m/state_dict_epoch26.pt\"\n",
         "model_path = \"/home/tim/Development/OCELFeatureExtractionExperiments/models/GCN_20230315_23h22m/state_dict_epoch6.pt\"\n",
@@ -440,27 +430,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 2626/2626 [00:30<00:00, 86.32it/s] \n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "tensor(0.4440)"
-            ]
-          },
-          "execution_count": 12,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "normed_train_mae = evaluate_model(\n",
         "    model=model,\n",
@@ -474,27 +446,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 657/657 [00:07<00:00, 86.79it/s] \n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "tensor(0.4535)"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "normed_val_mae = evaluate_model(\n",
         "    model=model,\n",
@@ -508,27 +462,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 699/699 [00:13<00:00, 51.52it/s]\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "tensor(0.4386)"
-            ]
-          },
-          "execution_count": 14,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "normed_test_mae = evaluate_model(\n",
         "    model=model,\n",
@@ -542,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -555,20 +491,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Mean absolute error denormalized:\n",
-            "Train MAE:  1721453.9\n",
-            "Val MAE:    1732891.6\n",
-            "Test MAE:   1715052.8\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "train_mae = fs.scaler.inverse_transform([normed_train_mae]*25)[-2]\n",
         "val_mae = fs.scaler.inverse_transform([normed_val_mae]*25)[-2]\n",
